--- a/blog-stylesheet.css
+++ b/blog-stylesheet.css
@@ -19,14 +19,8 @@ header #tagline {
     font-style: oblique;
 }
 
-header hr {
-    height: 1px;
-    border: none;
-    background-color: #000;
-    color: #000;
-    width: 60%;
-    text-align: left;
-    margin: 0 auto 0 0;
+#top {
+    margin-bottom: 20px;
 }
 
 #navbar {
@@ -35,7 +29,7 @@ header hr {
     top: 0;
     bottom 0;
     height: 100%;
-    padding: 20% 5%;
+    padding: 20% 3%;
 }
 
 #navbar ul{
@@ -47,9 +41,10 @@ header hr {
 #navbar a{ 
     color: #B7C3D0;
     text-decoration: none;
+    text-transform: uppercase;
     font-size: 1em;
     font-weight: bold;
-    font-family: Palatino, 'Book Antiqua', Georgia, serif;
+    font-family: 'Raleway', Helvetica, serif;
 }
 
 #navbar a:hover{
@@ -57,13 +52,14 @@ header hr {
 }
 
 article {
-    margin: 0 auto;
+    margin: 5% auto;
 }
 
 article header{
     font-family: Palatino,'Book Antiqua', Georgia, serif;
     color: #333333;
     position: static;
+    margin-bottom: 15px;
 }
 
 article .body {
